added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,55 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <!-- HTML Section -->
+      <section class="card" id="html-section">
+          <h2>HTML</h2>
+            <ul>
+              <li>Enter your HTML notes here</li>
+            </ul>
+
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+        </ul>
+      </section>
+   
+      <!-- CSS Section -->
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+
+      <!-- Git Section -->
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <p>How to add and commit to a branch</p>
+        <ul>
+          <li>Never write anything on the main branch: create a separate branch called “feature”. 
+            When you are ready to push things up to the main branch:
+            </li>
+            <li>git add .</li>
+            <li>git commit -m “text here”</li>
+            <li>git pull origin master</li>
+            <li>git push origin “feature branch name here”</li>
+            <li>Then, go to the repo on github. Look for something that says “Compare & pull request”. If you do not see this, On the left hand side of the page, under “Code”, switch to the feature branch. You will then hopefully see something that says “behind of commits” and ask for a pull request there. Create pull requests, type in a title, and continue on!</li>
+            <p>More git tips:</p>
+            <li>git status: checks what branch we are currently on</li>
+            <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        </ul>
+      </section>
+   
+
+      <!-- JavaScript Section -->
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
