added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -15,10 +16,6 @@
       <!-- HTML Section -->
       <section class="card" id="html-section">
           <h2>HTML</h2>
-            <ul>
-              <li>Enter your HTML notes here</li>
-            </ul>
-
         <ul>
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
@@ -29,7 +26,8 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
       </section>
    
@@ -37,7 +35,7 @@
       <!-- Git Section -->
       <section class="card" id="git-section">
         <h2>Git</h2>
-        <p>How to add and commit to a branch</p>
+        <p class="subheadings">How to add and commit to a branch</p>
         <ul>
           <li>Never write anything on the main branch: create a separate branch called “feature”. 
             When you are ready to push things up to the main branch:
@@ -47,7 +45,7 @@
             <li>git pull origin master</li>
             <li>git push origin “feature branch name here”</li>
             <li>Then, go to the repo on github. Look for something that says “Compare & pull request”. If you do not see this, On the left hand side of the page, under “Code”, switch to the feature branch. You will then hopefully see something that says “behind of commits” and ask for a pull request there. Create pull requests, type in a title, and continue on!</li>
-            <p>More git tips:</p>
+            <p class="subheadings">More git tips:</p>
             <li>git status: checks what branch we are currently on</li>
             <li>git checkout -b branch-name: creates a new branch and switches to it</li>
         </ul>
